--- a/스터디카페광고영상.html
+++ b/스터디카페광고영상.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <strong>스터딩스터디카페 광고</strong><br><br>
-<iframe src="사당스터디카페.mp4" height="460">
+<p>
+<iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
+</p>
 </body>
 </html>
