--- a/studyingstudycafe.html
+++ b/studyingstudycafe.html
@@ -16,7 +16,32 @@
     <li><a href="스터딩스터디카페주소.html">스터디카페 주소</a></li>
     <li><a href="스터디카페광고영상.html">스터디카페 광고영상</a></li>
   </ol>
-
+<p>
   <div style="background-color:lightgreen"><p>안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.
     여러분의 공부를 위한 최상의 공간을 대여해드립니다.
     무더운 여름날 에어컨 시원하게 나오는 스터디카페에 오셔서 쾌적한 환경에서 열공하세요^^</div>
+</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://studyingstudycafe.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+</body>
+</html>
