--- a/index.html
+++ b/index.html
@@ -1,49 +1,93 @@
 <!doctype html>
+
 <html>
+
 <head>
+
   <title>styudingstudycafe - html</title>
+
   <meta charset="utf-8">
+
+  <style>
+
+  h1{color:red}
+
+  </style>
+
 </head>
+
 <body>
-  <h1><a href="index.html">공간사업</a></h1>
+
+  <h1><strong>스터딩스터디카페(STUDYING STUDYCAFE)</strong></h1>
+
   <ol>
-    <li><a href="2.html">Sharing</a></li>
-    <li><a href="1.html">Studying</a></li>
-    <li><a href="3.html">Keeping</a></li>
+
+    <li><a href="스터디카페설명.html">스터디카페 설명</a></li>
+
+    <li><a href="스터디카페내부사진.html">스터디카페 내부사진</a></li>
+
+    <li><a href="스터디카페상세요금.html">스터디카페 상세요금</a></li>
+
+    <li><a href="스터딩스터디카페주소.html">스터디카페 주소</a></li>
+
+    <li><a href="스터디카페광고영상.html">스터디카페 광고영상</a></li>
+
   </ol>
-  <h2><a href="http://blog.naver.com/PostView.nhn?blogId=soopgnl&logNo=221475377435&categoryNo=20&parentCategoryNo=0&viewDate=&currentPage=1&postListTopCurrentPage=1&from=postView"
-    target="_blank" title="스터디카페에 대한 설명">스터디카페</a>란 무엇인가?</h2> 스터디카페란 조용한 환경에서 공부에 집중할 수 있는 환경을 제공하는 장소입니다.
-  이는 독서실과 유사하지만 다른 점은 독서실은 지정석이 존재하지만 <strong>스터디카페는 <u>지정석이 따로 없다</u>는 점입니다.</strong>
-  또한, <strong>기본적으로 스터디카페는 <u>무인운영</u>이 원칙입니다.</strong> 따라서 결제는 키오스크에서 하시면 됩니다.<br><br><br>
 
-  <p>안녕하세요 스터딩 스터디카페입니다.
+<p>
+
+  <div style="background-color:lightgreen"><p>안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.
+
     여러분의 공부를 위한 최상의 공간을 대여해드립니다.
-    무더운 여름날 에어컨 시원하게 나오는 스터디카페에 오셔서 쾌적한 환경에서 열공하세요^^
-  </p><p style="margin-top:45px;">1시간에 오픈석은 2,000원이고, 박스석은 2,500원입니다.
-    첫 결제는 최소 2시간부터 가능합니다. 정기권은 시간권과 기간권으로 나뉘는데,
-    시간권은 50시간은 8만원, 100시간은 15만원입니다.
-    기간권은 15일권은 10만원 30일권은 18만원입니다.</p>
-  <p style="margin-top:45px;">커피와 차, 프린트 잉크는 무료로 제공됩니다.
-    커피머신에서 맛있는 무료 커피를 드세요.
-    차는 메밀차, 현미녹차, 맥샘 믹스커피, 립톤 복숭아티가 무료로 재공됩니다.
-    얼음정수기를 통해 시원한 음료를 직접 만들어 드세요.</p>
-<table>
-    <tr>
-        <td>50시간</td>
-        <td>8만원</td>
-    </tr>
-    <tr>
-        <td>100시간</td>
-        <td>15만원</td>
-    </tr>
-    <tr>
-        <td>30일</td>
-        <td>18만원</td>
-    </tr>
-</table>
+
+    무더운 여름날 에어컨 시원하게 나오는 스터디카페에 오셔서 쾌적한 환경에서 열공하세요^^</div>
+
+</p>
+
+<p>
+
+  <div id="disqus_thread"></div>
+
+<script>
 
 
 
-    <img src="studying.jpg" width="100%">
+/**
+
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+/*
+
+var disqus_config = function () {
+
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+
+};
+
+*/
+
+(function() { // DON'T EDIT BELOW THIS LINE
+
+var d = document, s = d.createElement('script');
+
+s.src = 'https://studyingstudycafe.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+
+(d.head || d.body).appendChild(s);
+
+})();
+
+</script>
+
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+</p>
+
 </body>
+
 </html>
