--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <style>
   h1{color:red}
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144345480-1');
+</script>
 </head>
 <body>
   <h1><strong>스터딩스터디카페(STUDYING STUDYCAFE)</strong></h1>
