--- a/스터디카페설명.html
+++ b/스터디카페설명.html
@@ -3,6 +3,15 @@
 <head>
 <title>스터디카페 설명 - html</title>
 <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144345480-1');
+</script>
 </head>
 <body>
   <a href="http://blog.naver.com/PostView.nhn?blogId=soopgnl&logNo=221475377435&categoryNo=20&parentCategoryNo=0&viewDate=&currentPage=1&postListTopCurrentPage=1&from=postView"
