--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <li><a href="스터딩스터디카페주소.html">스터디카페 주소</a></li>
     <li><a href="스터디카페광고영상.html">스터디카페 광고영상</a></li>
   </ol>
-<p> 안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.
-    여러분의 공부를 위한 최상의 공간을 대여해드립니다.
+<p style="color: yellow"> 안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.<br>
+    여러분의 공부를 위한 최상의 공간을 대여해드립니다.<br>
     무더운 여름날 에어컨 시원하게 나오는 스터디카페에 오셔서 쾌적한 환경에서 열공하세요^^
 </p>
 <p>
