--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <style>
-  h1{color:red}
+  h1{color:red; font-size: 45px; text-align: center;}
     body{background-image: url(studying01.jpg);}
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -19,7 +19,7 @@
 </script>
 </head>
 <body>
-  <h1><strong>스터딩스터디카페(STUDYING STUDYCAFE)</strong></h1>
+  <h1><strong>스터딩스터디카페<br>(STUDYING STUDYCAFE)</strong></h1>
   <ol>
     <li><a href="스터디카페설명.html">스터디카페 설명</a></li>
     <li><a href="스터디카페내부사진.html">스터디카페 내부사진</a></li>
