--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <style>
-  h1{color:red; font-size: 45px; text-align: center;}
+  h1{color:yellow; font-size: 45px; text-align: center;}
     body{background-image: url(studying01.jpg);}
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
