--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <h1><strong>스터딩스터디카페<br>(STUDYING STUDYCAFE)</strong></h1>
   <ol>
     <li><a href="스터디카페설명.html">스터디카페 설명</a></li>
+    <li><a href="스터디카페인사말.html">스터디카페 인사말</a></li>
     <li><a href="스터디카페내부사진.html">스터디카페 내부사진</a></li>
     <li><a href="스터디카페상세요금.html">스터디카페 상세요금</a></li>
     <li><a href="스터딩스터디카페주소.html">스터디카페 주소</a></li>
