--- a/스터디카페내부사진.html
+++ b/스터디카페내부사진.html
@@ -3,6 +3,9 @@
 <head>
   <title>스터디카페 내부사진 - html</title>
   <meta charset="utf-8">
+  <style>
+    body{background-color: lightgreen;}
+    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
