--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <style>
-  h1{color:yellow; font-size: 45px; text-align: center;}
+  h1{color:green; font-size: 50px; text-align: center;}
     body{background-image: url(studying01.jpg);}
+    a{color:green; font-size: 30px; text-align: center;}
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
