--- a/스터디카페내부사진.html
+++ b/스터디카페내부사진.html
@@ -3,10 +3,7 @@
 <head>
   <title>스터디카페 내부사진 - html</title>
   <meta charset="utf-8">
-  <style>
-    body{background-color: lightgreen; font-size:30px;}
-    </style>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -16,8 +13,8 @@
   gtag('config', 'UA-144345480-1');
 </script>
 </head>
-<body><br><br>
-  <strong>스터딩스터디카페 내부사진</strong><br><br><br>
+<body>
+  <h1>스터딩스터디카페 내부사진</h1>
 <p>
       <img src="studying12.jpg" width="100%">
       <img src="studying08.jpg" width="100%">
