--- a/studyingstudycafe.html
+++ b/studyingstudycafe.html
@@ -4,23 +4,56 @@
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
   <style>
-  h1{color:red}
+  h1{ text-align: center;
+    padding: 0; margin: 0;
+  }
+  a{color:black; font-size: 30px;}
+  ul{margin: 0;
+    padding: 10px; padding-right: 0; padding-left: 40px;}
+    body{margin: 0;}
+  #pic{background-image:url(studying01사이즈수정.jpg);
+    width: 90%; height: 100%;
+    margin-left: 172px;
+    margin:0;}
+  #grid{display: grid;
+   grid-template-columns: 200px 1fr;}
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144345480-1');
+</script>
 </head>
 <body>
+  <h1><img src="studying21.jpg"width="20%"></h1>
+
+  <div id="grid">
+    <ul><br>
+    <a href="스터디카페설명.html">개념설명</a><br><br><br>
+    <a href="스터디카페인사말.html">인사말</a><br><br><br>
+    <a href="스터디카페내부사진.html">내부사진</a><br><br><br>
+    <a href="스터디카페상세요금.html">상세요금</a><br><br><br>
+    <a href="스터딩스터디카페주소.html">오시는 길</a><br><br><br>
+    <a href="스터디카페광고영상.html">광고영상</a><br><br>
+  </ul>
+  <p id="pic">
+  </p>
+</div>
+<!--
   <h1><strong>스터딩스터디카페(STUDYING STUDYCAFE)</strong></h1>
   <ol>
-    <li><a href="스터디카페설명.html">스터디카페 설명</a></li>
-    <li><a href="스터디카페내부사진.html">스터디카페 내부사진</a></li>
-    <li><a href="스터디카페상세요금.html">스터디카페 상세요금</a></li>
-    <li><a href="스터딩스터디카페주소.html">스터디카페 주소</a></li>
-    <li><a href="스터디카페광고영상.html">스터디카페 광고영상</a></li>
+    <li><a href="스터디카페설명.html"><font color="blue">스터디카페 설명</a></li>
+    <li><a href="스터디카페내부사진.html"><font color="blue">스터디카페 내부사진</a></li>
+    <li><a href="스터디카페상세요금.html"><font color="blue">스터디카페 상세요금</a></li>
+    <li><a href="스터딩스터디카페주소.html"><font color="blue">스터디카페 주소</a></li>
+    <li><a href="스터디카페광고영상.html"><font color="blue">스터디카페 광고영상</a></li>
   </ol>
-<p>
-  <div style="background-color:lightgreen"><p>안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.
-    여러분의 공부를 위한 최상의 공간을 대여해드립니다.
-    무더운 여름날 에어컨 시원하게 나오는 스터디카페에 오셔서 쾌적한 환경에서 열공하세요^^</div>
-</p>
+-->
+<br><br><br><br><br>
 <p>
   <div id="disqus_thread"></div>
 <script>
@@ -42,6 +75,21 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<p>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5d36b04e6d808312283988d9/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </p>
 </body>
 </html>
