--- a/스터디카페광고영상.html
+++ b/스터디카페광고영상.html
@@ -1,12 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>스터디카페 주소 - html</title>
+  <title>스터디카페 광고영상 - html</title>
   <meta charset="utf-8">
-  <style>
-    body{background-color: lightgreen; font-size:30px}
-    </style>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -16,8 +13,8 @@
   gtag('config', 'UA-144345480-1');
 </script>
 </head>
-<body><br><br
-<strong>스터딩스터디카페 광고</strong><br><br>
+<body>
+<h1>스터딩스터디카페 광고영상</h1>
 <p>
 <iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
 </p>
