--- a/studyingstudycafe.html
+++ b/studyingstudycafe.html
@@ -3,21 +3,8 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
-  <style>
-  h1{ text-align: center;
-    padding: 0; margin: 0;
-  }
-  a{color:black; font-size: 30px;}
-  ul{margin: 0;
-    padding: 10px; padding-right: 0; padding-left: 40px;}
-    body{margin: 0;}
-  #pic{background-image:url(studying01사이즈수정.jpg);
-    width: 90%; height: 100%;
-    margin-left: 172px;
-    margin:0;}
-  #grid{display: grid;
-   grid-template-columns: 200px 1fr;}
-  </style>
+  <link rel="stylesheet" href="style.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
