--- a/스터딩스터디카페주소.html
+++ b/스터딩스터디카페주소.html
@@ -3,6 +3,9 @@
 <head>
   <title>스터디카페 주소 - html</title>
   <meta charset="utf-8">
+  <style>
+  body{text-align: center;}
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -15,7 +18,8 @@
 </head>
 <body>
   <p>
-  <h1>스터딩스터디카페 오시는 길</h1>(이미지를 클릭하시면 네이버지도로 연결됩니다.)<br><br><br>
+  <h1><img src="studying21.jpg"width="20%"><br>
+    스터딩스터디카페 오시는 길</h1>(이미지를 클릭하시면 네이버지도로 연결됩니다.)<br><br><br>
   <a href="https://map.naver.com/local/siteview.nhn?code=1550514722&_ts=1563361000165" target=_blank title="스터딩스터디카페 네이버주소"><img src="studying23.jpg" width="100%"></a>
 </p>
 </body>
