--- a/스터디카페광고영상.html
+++ b/스터디카페광고영상.html
@@ -3,6 +3,9 @@
 <head>
   <title>스터디카페 광고영상 - html</title>
   <meta charset="utf-8">
+  <style>
+  body{text-align: center;}
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -14,7 +17,7 @@
 </script>
 </head>
 <body>
-<h1>스터딩스터디카페 광고영상</h1>
+<h1><img src="studying21.jpg"width="20%"><br>스터딩스터디카페 광고영상</h1>
 <p>
 <iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
 </p>
