--- a/스터디카페상세요금.html
+++ b/스터디카페상세요금.html
@@ -3,6 +3,10 @@
 <head>
   <title>스터디카페 상세요금 - html</title>
   <meta charset="utf-8">
+  <style>
+  body{text-align: center;}
+  h1, p{margin:0;}
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -14,7 +18,7 @@
 </script>
 </head>
 <body>
-  <h1>스터딩스터디카페 상세요금</h1>
+  <h1><img src="studying21.jpg"width="20%"><br>스터딩스터디카페 상세요금</h1>
 <p>
       <img src="studying18.jpg" width="100%">
       <img src="studying19.jpg" width="100%">
