--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -3,9 +3,14 @@
 <head>
   <title> 스터디카페 인사말</title>
   <meta charset="utf-8">
+  <style>
+  body{text-align: center;}
+  p{font-size: 20px;}
+  </style>
   </head>
   <body>
-   <h1><q>감성도 공부도 모두 포기할 수 없다면...</q></h1>
+   <h1><img src="studying21.jpg"width="20%"><br>
+     <q>감성도 공부도 모두 포기할 수 없다면...</q></h1>
   <p>  안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.<br>
     여러분의 공부를 위한 최상의 공간을 대여해드립니다.<br>
     시스템 에어컨과 공기청정기를 항상 가동하고 있습니다.<br>
