--- a/스터디카페설명.html
+++ b/스터디카페설명.html
@@ -6,6 +6,8 @@
 <style>
 body{text-align: center;}
 p{font-size: 20px;}
+a{text-decoration: none;}
+h1{text-decoration: underline;}
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
@@ -20,7 +22,8 @@ p{font-size: 20px;}
 <body>
   <a href="http://blog.naver.com/PostView.nhn?blogId=soopgnl&logNo=221475377435&categoryNo=20&parentCategoryNo=0&viewDate=&currentPage=1&postListTopCurrentPage=1&from=postView"
     target="_blank" title="스터디카페에 대한 좀 더 자세한 설명">
-    <h1><img src="studying21.jpg"width="20%"><br>스터디카페란 무엇인가?</h1></a>
+    <h1><img src="studying21.jpg"width="20%"><br>스터디카페란 무엇인가?</h1>
+    (클릭하시면 좀 더 자세한 설명을 보실 수 있습니다.)</a>
 <p>스터디카페란 조용한 환경에서 공부에 집중할 수 있는 환경을 제공하는 장소입니다.
  <br>이러한 점이 독서실과 유사합니다. 하지만 스터디 카페가 독서실과 다른 점은
  <br>독서실은 지정석이 존재하지만 <strong>스터디카페는 <u>지정석이 따로 없다</u>는 점입니다.</strong>
