--- a/스터디카페내부사진.html
+++ b/스터디카페내부사진.html
@@ -17,7 +17,7 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21.jpg"width="20%"><br>스터딩스터디카페 내부사진</h1>
+  <h1><img src="studying21.jpg"width="20%"></h1>
 <p>
       <img src="studying12.jpg" width="100%">
       <img src="studying08.jpg" width="100%">
