--- a/스터디카페상세요금.html
+++ b/스터디카페상세요금.html
@@ -18,7 +18,7 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21.jpg"width="20%"><br>스터딩스터디카페 상세요금</h1>
+  <h1><img src="studying21.jpg"width="20%"><br></h1>
 <p>
       <img src="studying18.jpg" width="100%">
       <img src="studying19.jpg" width="100%">
