--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -17,7 +17,9 @@
     해충방지를 위해 세스코 멤버스에 가입하였습니다.<br>
     공부에 집중하실 수 있도록 백색소음기도 설치하였습니다.<br>
     회원님들의 안전을 위해 24시간 CCTV가동과 ADT CAPS 출동서비스를 제공합니다.<br>
-    이외에도 얼음정수기, 커피머신, 각종 차와 음료를 무료로 제공하고 있습니다.<br>
+    이외에도 프린트(잉크는 무료/종이는 셀프), 스마트광랜 와이파이,<br>
+    독서대, 무소음키패드, 무소음마우스, 담요,<br>
+     얼음정수기, 커피머신, 각종 차와 음료를 제공하고 있습니다.<br>
     저희 스터딩 스터디카페는 회원님들의 공부환경을 위해 항상 노력하겠습니다.<br>
 </p>
 <body>
