--- a/스터디카페상세요금.html
+++ b/스터디카페상세요금.html
@@ -20,8 +20,8 @@
 <body>
   <h1><img src="studying21.jpg"width="20%"><br></h1>
 <p>
-      <img src="studying18.jpg" width="100%">
-      <img src="studying19.jpg" width="100%">
+      <img src="studying18사이즈수정.jpg" width="100%">
+      <img src="studying19사이즈수정.jpg" width="100%">
     </p>
 </body>
 </html>
