--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -6,6 +6,11 @@
   <style>
   body{text-align: center;}
   p{font-size: 20px;}
+    @media screen and (max-width:400px) and (max-height:700px) {
+      h1{
+        font-size: 100px;
+      }
+    }
   </style>
   </head>
   <body>
