--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -3,14 +3,11 @@
 <head>
   <title> 스터디카페 인사말</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+  initial-scale=1.0">
   <style>
   body{text-align: center;}
   p{font-size: 20px;}
-    @media screen and (max-width:400px) and (max-height:700px) {
-      h1{
-        font-size: 100px;
-      }
-    }
   </style>
   </head>
   <body>
