--- a/스터디카페광고영상.html
+++ b/스터디카페광고영상.html
@@ -3,6 +3,8 @@
 <head>
   <title>스터디카페 광고영상 - html</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+  initial-scale=1.0">
   <style>
   body{text-align: center;}
   </style>
