--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <h1><img src="studying21.jpg"width="20%"></h1>
 
   <div id="grid">
-    <ul><br>
-    <a href="스터디카페설명.html">개념설명</a><br><br><br>
-    <a href="스터디카페인사말.html">인사말</a><br><br><br>
-    <a href="스터디카페내부사진.html">내부사진</a><br><br><br>
-    <a href="스터디카페상세요금.html">상세요금</a><br><br><br>
-    <a href="스터딩스터디카페주소.html">오시는 길</a><br><br><br>
-    <a href="스터디카페광고영상.html">광고영상</a><br><br>
+      <ul><br>
+    <a href="스터디카페설명.html">▶스터디카페란?</a><br><br><br>
+    <a href="스터디카페인사말.html">▶스터딩소개</a><br><br><br>
+    <a href="스터디카페내부사진.html">▶내부사진</a><br><br><br>
+    <a href="스터디카페상세요금.html">▶상세요금</a><br><br><br>
+    <a href="스터딩스터디카페주소.html">▶오시는 길</a><br><br><br>
+    <a href="스터디카페광고영상.html">▶광고영상</a><br><br>
   </ul>
   <p id="pic">
   </p>
