--- a/스터디카페광고영상.html
+++ b/스터디카페광고영상.html
@@ -19,7 +19,7 @@
 </script>
 </head>
 <body>
-<h1><img src="studying21.jpg"width="20%"><br></h1>
+<h1><img src="studying21사이즈수정.jpg"width="20%"><br></h1>
 <p>
 <iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
 </p>
