--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21.jpg"width="20%"></h1>
+  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
 
   <div id="grid">
       <ul><br>
