--- a/스터디카페상세요금.html
+++ b/스터디카페상세요금.html
@@ -18,7 +18,7 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21사이즈수정.jpg"width="20%"><br></h1>
+  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1><br>
 <p>
       <img src="studying18사이즈수정.jpg" width="100%">
       <img src="studying19사이즈수정.jpg" width="100%">
