--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -11,7 +11,7 @@
   </style>
   </head>
   <body>
-   <h1><img src="studying21사이즈수정.jpg"width="20%"><br>
+   <h1><img src="studying21사이즈수정.jpg"width="20%"><br><br>
      <q>감성도 공부도 모두 포기할 수 없다면...</q></h1>
   <p>  안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.<br>
     여러분의 공부를 위한 최상의 공간을 대여해드립니다.<br>
