--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,
+  minimum-scale=5.0">
   <link rel="stylesheet" href="style.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
