--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,
-  minimum-scale=0.02">
+   <meta name="viewport" content="width=device-width,
+  initial-scale=0.5">
   <link rel="stylesheet" href="style.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
