--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <style>
+  h1{ text-align: center;
+    padding: 0; margin: 0;
+  }
+  a{color:black; font-size: 30px; text-decoration: none; text-align: center;}
+    <meta name="viewport" content="width=device-width,
+    initial-scale=1.0">
+  </style>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
@@ -16,30 +23,19 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1><br>
-
-  <div id="grid">
-      <ul><br>
-    <a href="스터디카페설명.html">▶스터디카페란?</a><br><br><br>
-    <a href="스터디카페인사말.html">▶스터딩소개</a><br><br><br>
-    <a href="스터디카페내부사진.html">▶내부사진</a><br><br><br>
-    <a href="스터디카페상세요금.html">▶상세요금</a><br><br><br>
-    <a href="스터딩스터디카페주소.html">▶오시는 길</a><br><br><br>
-    <a href="스터디카페광고영상.html">▶광고영상</a><br><br>
+  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+<br>
+    <ul>
+    <a href="스터디카페설명.html"><img src="스터디카페문구.jpg"></a>&emsp;
+    <a href="스터디카페인사말.html"><img src="스터딩소개문구.jpg"></a>&emsp;
+    <a href="스터디카페내부사진.html"><img src="내부사진문구.jpg"></a>&emsp;
+    <a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&emsp;
+    <a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>&emsp;
+    <a href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
   </ul>
-  <p id="pic">
-  </p>
-</div>
-<!--
-  <h1><strong>스터딩스터디카페(STUDYING STUDYCAFE)</strong></h1>
-  <ol>
-    <li><a href="스터디카페설명.html"><font color="blue">스터디카페 설명</a></li>
-    <li><a href="스터디카페내부사진.html"><font color="blue">스터디카페 내부사진</a></li>
-    <li><a href="스터디카페상세요금.html"><font color="blue">스터디카페 상세요금</a></li>
-    <li><a href="스터딩스터디카페주소.html"><font color="blue">스터디카페 주소</a></li>
-    <li><a href="스터디카페광고영상.html"><font color="blue">스터디카페 광고영상</a></li>
-  </ol>
--->
+<p>
+<img src="studying01.jpg" width="100%">
+</p>
 <br>
 <p>
   <div id="disqus_thread"></div>
