--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   h1{ text-align: center;
     padding: 0; margin: 0;
   }
+    </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
