--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+  initial-scale=1.0">
   <style>
-  h1{ text-align: center;
-    padding: 0; margin: 0;
-  }
-    </style>
+  body{ text-align: center;}
+  </style>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -21,14 +22,14 @@
 <body>
   <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
 <br>
-    <ul>
-   <a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&emsp;
-    <a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>&emsp;
-    <a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>&emsp;
-    <a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&emsp;
-    <a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>&emsp;
+    <div>
+    <a href="스터디카페설명.html"><img src="스터디카페문구.jpg"></a>
+    <a href="스터디카페인사말.html"><img src="스터딩소개문구.jpg"></a>
+    <a href="스터디카페내부사진.html"><img src="내부사진문구.jpg"></a>
+    <a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>
+    <a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
     <a href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
-  </ul>
+  </div>
 <p>
 <img src="studying01.jpg" width="100%">
 </p>
@@ -72,4 +73,3 @@ s.setAttribute('data-timestamp', +new Date());
 </p>
 </body>
 </html>
-
