--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style>
   body{ text-align: center;}
+  .row{border: solid 2px black}
   </style>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,18 +22,29 @@
 <body>
   <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
 <br>
-    <div>
+<div class="container-fluid">
+  <div class="row">
+<a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>
+<a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>
+<a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>
+<a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>
+<a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
+</div>
+</div>
+  <!--
+  <div>
     <a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&nbsp;
     <a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>&nbsp;
     <a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>&nbsp;
     <a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&nbsp;
     <a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
   </div>
+-->
 <p>
 <img src="studying01.jpg" width="100%">
 </p>
 <p>
-  <iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
+  <iframe src="스터딩스터디카페광고영상.mp4" height="460px" frameborder="0" allowfullscreen></iframe>
 </p>
 <br>
 <p>
@@ -73,4 +86,3 @@ s.setAttribute('data-timestamp', +new Date());
 </p>
 </body>
 </html>
-
