--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 <br>
 <div class="container-fluid">
   <div class="row">
-<a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>
-<a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>
-<a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>
-<a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>
-<a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
+<a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&emsp;
+<a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>&emsp;
+<a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>&emsp;&emsp;
+<a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&emsp;
+<a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>&emsp;
+<a href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
 </div>
 </div>
   <!--
@@ -42,9 +43,6 @@
 -->
 <p>
 <img src="studying01.jpg" width="100%">
-</p>
-<p>
-  <iframe src="스터딩스터디카페광고영상.mp4" height="460px" frameborder="0" allowfullscreen></iframe>
 </p>
 <br>
 <p>
