--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>styudingstudycafe - html</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <style>
   body{ text-align: center;}
-  .row{border: solid 2px black}
   </style>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,18 +20,65 @@
 </script>
 </head>
 <body>
-  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
-<br>
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-<a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&emsp;
-<a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>&emsp;
-<a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>&emsp;&emsp;
-<a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&emsp;
-<a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>&emsp;
-<a href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
+    <div class="col">
+        <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+<ul class="nav justify-content-center">
+<li class="nav-item dropdown">
+   <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+    href="#">스터딩 소개</a>
+<div class="dropdown-menu" style="text-align: center;">
+  <a href="스터디카페설명.html">스터디카페 설명</a><br>
+  <a href="스터디카페인사말.html">인사말</a><br>
+  <a href="스터디카페내부사진.html">내부사진</a><br>
+  <a href="스터디카페상세요금.html">상세요금</a><br>
+  <a href="스터딩스터디카페주소.html">오시는 길</a>
+</div>
+</li>
+</ul>
 </div>
 </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+<!--
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>
+  </li>
+<li class="nav-item">
+   <a class="nav-link active" href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>
+</li>
+<li class="nav-item">
+   <a class="nav-link active" href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>
+</li>
+<li class="nav-item">
+   <a class="nav-link active" href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>
+</li>
+<li class="nav-item">
+<a class="nav-link active" href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
+</li>
+<li class="nav-item">
+<a class="nav-link active" href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+-->
+
   <!--
   <div>
     <a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&nbsp;
@@ -44,7 +91,9 @@
 <p>
 <img src="studying01.jpg" width="100%">
 </p>
-<br>
+<p>
+<iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
+</p>
 <p>
   <div id="disqus_thread"></div>
 <script>
