--- a/index.html
+++ b/index.html
@@ -20,80 +20,91 @@
 </script>
 </head>
 <body>
-<div class="container">
-  <div class="row">
-    <div class="col">
-        <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
-<ul class="nav justify-content-center">
-<li class="nav-item dropdown">
-   <a class="nav-link dropdown-toggle" data-toggle="dropdown"
-    href="#">스터딩 소개</a>
-<div class="dropdown-menu" style="text-align: center;">
-  <a href="스터디카페설명.html">스터디카페 설명</a><br>
-  <a href="스터디카페인사말.html">인사말</a><br>
-  <a href="스터디카페내부사진.html">내부사진</a><br>
-  <a href="스터디카페상세요금.html">상세요금</a><br>
-  <a href="스터딩스터디카페주소.html">오시는 길</a>
-</div>
-</li>
-</ul>
-</div>
-</div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-<!--
-<div class="container">
-  <div class="row">
-    <div class="col">
-        <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>
-  </li>
-<li class="nav-item">
-   <a class="nav-link active" href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>
-</li>
-<li class="nav-item">
-   <a class="nav-link active" href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>
-</li>
-<li class="nav-item">
-   <a class="nav-link active" href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>
-</li>
-<li class="nav-item">
-<a class="nav-link active" href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
-</li>
-<li class="nav-item">
-<a class="nav-link active" href="스터디카페광고영상.html"><img src="광고영상문구.jpg"></a>
-</li>
-</ul>
-</div>
-</div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
--->
-
-  <!--
-  <div>
-    <a href="스터디카페설명.html"><img src="스터디카페문구.JPG"></a>&nbsp;
-    <a href="스터디카페인사말.html"><img src="스터딩소개문구.JPG"></a>&nbsp;
-    <a href="스터디카페내부사진.html"><img src="내부사진문구.JPG"></a>&nbsp;
-    <a href="스터디카페상세요금.html"><img src="상세요금문구.jpg"></a>&nbsp;
-    <a href="스터딩스터디카페주소.html"><img src="오시는길문구.jpg"></a>
+  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+  <ul class="nav justify-content-center">
+  <li class="nav-item dropdown">
+     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+      >스터딩 소개</a>
+  <div class="dropdown-menu" style=" text-align: center; font-style: italic; ">
+    <a href="스터디카페설명.html">스터디카페 설명</a><br>
+    <a href="스터디카페인사말.html">인사말</a><br>
   </div>
--->
-<p>
-<img src="studying01.jpg" width="100%">
-</p>
-<p>
-<iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe>
-</p>
+  </li>
+  </ul>
+  </div>
+  </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<br>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="card justify-content-center">
+          <div class="card-header">
+            내부사진
+          </div>
+          <div class="card-body">
+            <p><img src="studying01.jpg" width="100%" alt="" /></p>
+            <p><a href="스터디카페내부사진.html" class="btn btn-primary">더보기</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container ">
+   <div class="row">
+    <div class="col-12">
+    <div class="card justify-content-center">
+      <div class="card-header">
+        상세요금
+      </div>
+        <div class="card-body">
+          <p><img src="studying18사이즈수정.jpg" width="100%" alt="" /></p>
+          <p><a href="스터디카페상세요금.html" class="btn btn-primary">더보기</a></p>
+      </div>
+    </div>
+    </div>
+   </div>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="card justify-content-center">
+          <div class="card-header">
+            오시는 길
+          </div>
+          <div class="card-body">
+            <p><img src="studying23.jpg" width="100%" alt="" /></p>
+            <p><a href="https://map.naver.com/local/siteview.nhn?code=1550514722&_ts=1563361000165"
+               target=_blank title="스터딩스터디카페 네이버주소" class="btn btn-primary">더보기</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="card justify-content-center">
+          <div class="card-header">
+            광고영상
+          </div>
+          <div class="card-body">
+            <p><iframe src="스터딩스터디카페광고영상.mp4" height="460" frameborder="0" allowfullscreen></iframe></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 <p>
   <div id="disqus_thread"></div>
 <script>
