--- a/스터디카페설명.html
+++ b/스터디카페설명.html
@@ -7,9 +7,6 @@
 initial-scale=1.0">
 <style>
 body{text-align: center;}
-p{font-size: 20px;}
-a{text-decoration: none;}
-h1{text-decoration: underline;}
 </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
@@ -22,6 +19,11 @@ h1{text-decoration: underline;}
 </script>
 </head>
 <body>
+  <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+  <p>
+<img src="studying26.jpg" width="100%">
+  </p>
+  <!--
   <a href="http://blog.naver.com/PostView.nhn?blogId=soopgnl&logNo=221475377435&categoryNo=20&parentCategoryNo=0&viewDate=&currentPage=1&postListTopCurrentPage=1&from=postView"
     target="_blank" title="스터디카페에 대한 좀 더 자세한 설명">
     <h1><img src="studying21사이즈수정.jpg"width="20%"><br><br>스터디카페란 무엇인가?</h1>
@@ -37,5 +39,6 @@ h1{text-decoration: underline;}
  <br><strong>기본적으로 스터디카페는 <u>무인운영</u>이 원칙입니다.</strong>
  <br>따라서 결제와 좌석지정, 좌석이동 및 퇴실처리는 키오스크에서 직접 하시면 됩니다.
 </p>
+-->
 </body>
 </html>
