--- a/스터디카페인사말.html
+++ b/스터디카페인사말.html
@@ -7,22 +7,12 @@
   initial-scale=1.0">
   <style>
   body{text-align: center;}
-  p{font-size: 20px;}
   </style>
   </head>
   <body>
-   <h1><img src="studying21사이즈수정.jpg"width="20%"><br><br>
-     <q>감성도 공부도 모두 포기할 수 없다면...</q></h1>
-  <p>  안녕하세요<strong><i>스터딩 스터디카페</i></strong>입니다.<br>
-    여러분의 공부를 위한 최상의 공간을 대여해드립니다.<br>
-    시스템 에어컨과 공기청정기를 항상 가동하고 있습니다.<br>
-    해충방지를 위해 세스코 멤버스에 가입하였습니다.<br>
-    공부에 집중하실 수 있도록 백색소음기도 설치하였습니다.<br>
-    회원님들의 안전을 위해 24시간 CCTV가동과 ADT CAPS 출동서비스를 제공합니다.<br>
-    이외에도 프린트(잉크는 무료/종이는 셀프), 스마트광랜 와이파이,<br>
-    독서대, 무소음키패드, 무소음마우스, 담요,<br>
-     얼음정수기, 커피머신, 각종 차와 음료를 제공하고 있습니다.<br>
-    저희 스터딩 스터디카페는 회원님들의 공부환경을 위해 항상 노력하겠습니다.<br>
-</p>
+   <h1><img src="studying21사이즈수정.jpg"width="20%"></h1>
+     <p>
+       <img src="studying25.jpg" width="100%">
+     </p>
 <body>
   </html>
