--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
      <a class="nav-link dropdown-toggle" data-toggle="dropdown"
       >스터딩 소개</a>
   <div class="dropdown-menu" style=" text-align: center; font-style: italic; ">
-    <a href="스터디카페설명.html">스터디카페 설명</a><br>
-    <a href="스터디카페인사말.html">인사말</a><br>
+    <a href="스터디카페설명.html">이용규칙</a><br>
+    <a href="스터디카페상세요금.html">상세요금</a><br>
+    <a href="스터디카페인사말.html">제공서비스</a><br>
   </div>
   </li>
   </ul>
@@ -56,22 +57,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <br>
-  <div class="container ">
-   <div class="row">
-    <div class="col-12">
-    <div class="card justify-content-center">
-      <div class="card-header">
-        상세요금
-      </div>
-        <div class="card-body">
-          <p><img src="studying18사이즈수정.jpg" width="100%" alt="" /></p>
-          <p><a href="스터디카페상세요금.html" class="btn btn-primary">더보기</a></p>
-      </div>
-    </div>
-    </div>
-   </div>
   </div>
   <br>
   <div class="container">
