--- a/스터딩스터디카페태화점내부사진.html
+++ b/스터딩스터디카페태화점내부사진.html
@@ -95,7 +95,7 @@ h1{
               <h4>(주)셰어링홈즈</h4>
               <p>사업자번호 448-81-01404 <br>
                 주소: 울산광역시 중구 신기15길 4, 3층(태화동)</p>
-                <p>Copyright &copy; 2019 Copyright ⓒ SHARING All rights reserved.</p>
+                <p>Copyright &copy; 2019 SHARING All rights reserved.</p>
           </div>
         </div>
       </div>
