--- a/StudyingStudycafeHomepage.html
+++ b/StudyingStudycafeHomepage.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>스터딩스터디카페</title>
+    <title>STUDYING</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean" rel="stylesheet">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -19,22 +21,39 @@ gtag('config', 'UA-144345480-1');
   <body>
     <style type="text/css">
       .jumbotron {
-        background-image: url('images/도서관이미지.jpg');
+        background-image: url('images/도서관3수정.jpg');
         background-size: cover;
         text-shadow: black 0.2em 0.2em 0.2em;
         color: white;
+        text-align: center;
+        font-family: 'Nanum Gothic', sans-serif;
       }
-      .jumbotron2 {
-        background-image: url('images/studying01수정.jpg');
-        background-size: cover;
-        text-shadow: black 0.2em 0.2em 0.2em;
-        color: white;
+      .sadang {
+        color: black;
+        border-top: 1px solid #f9f9f9;
+        border-bottom: 1px solid #f9f9f9;
+        border-left: 1px solid  #f9f9f9;
+        border-right: 1px solid  #f9f9f9;
+        font-family: 'Nanum Gothic', sans-serif;
+        text-align: center;
       }
-      .jumbotron3 {
-        background-image: url('images/울산태화점사진2수정.jpg');
-        background-size: cover;
-        text-shadow: black 0.2em 0.2em 0.2em;
-        color: white;
+      h2 {
+        margin: 0px;
+        background-color: #f9f9f9;
+        color: black;
+        border-bottom: 1px solid #f9f9f9;
+        border-radius: 0px;
+        padding: 0px;
+
+      }
+      .taehwa {
+        color: black;
+        border-top: 1px solid #f9f9f9;
+        border-bottom: 1px solid #f9f9f9;
+        border-left: 1px solid  #f9f9f9;
+        border-right: 1px solid  #f9f9f9;
+        font-family: 'Nanum Gothic', sans-serif;
+        text-align: center;
       }
     </style>
     <nav class="navbar navbar-default">
@@ -69,7 +88,7 @@ gtag('config', 'UA-144345480-1');
                <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://map.naver.com/local/siteview.nhn?code=1550514722&_ts=1570586353998" target="_blank">서울 사당점</a></li>
-                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272&_ts=1570969802965" target="_blank">울산 태화점</a></li>
+                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272" target="_blank">울산 태화점</a></li>
                 </ul>
                </li>
              </ul>
@@ -80,31 +99,24 @@ gtag('config', 'UA-144345480-1');
     <div class="container">
       <div class="jumbotron">
         <br><br>
-        <h1 class="text-center">스터딩 스터디카페를 소개합니다.</h1>
-        <br><br>
-        <p class="text-center">스터딩 스터디카페는 회원분들이 공부에 집중할 수 있도록 최상의 환경을 제공합니다. </p>
-        <br><br>
+        <h1>STUDYING을<br>소개합니다.</h1>
+        <br>
+        <p>스터딩스터디카페는 회원분들이 공부에 집중할 수 있도록 최상의 환경을 제공합니다.</p>
+        <br>
       </div>
     </div>
-    <div class="container">
-      <div class="jumbotron2">
-        <br><br><br><br><br>
-          <h1 class="text-center">서울 사당점 내부사진</h1>
-        <br><br><br><br><br>
-          <p class="text-center"><a href="스터딩스터디카페사당점내부사진.html" class="btn btn-primary">더보기</a></p>
-        <br><br><br>
-          </div>
-        </div>
-        <br><br>
-        <div class="container">
-          <div class="jumbotron3">
-            <br><br><br><br><br>
-              <h1 class="text-center">울산 태화점 내부사진</h1>
-            <br><br><br><br><br>
-              <p class="text-center"><a href="스터딩스터디카페태화점내부사진.html" class="btn btn-primary">더보기</a></p>
-            <br><br><br>
-              </div>
-            </div>
+    <br>
+    <div class="sadang">
+        <h2>서울 사당점</h2>
+      <img src="images/studying01.jpg" width="100%">
+        <p><a href="스터딩스터디카페사당점내부사진.html" class="btn btn-primary">더보기</a></p>
+    </div>
+    <br>
+    <div class="taehwa">
+      <h2>울산 태화점</h2>
+      <img src="images/울산태화점사진2.jpg" width="100%">
+      <p><a href="스터딩스터디카페태화점내부사진.html" class="btn btn-primary">더보기</a></p>
+    </div>
         <br><br>
     <footer style="background-color: #000000; color: #ffffff;">
       <div class="container">
@@ -132,26 +144,11 @@ gtag('config', 'UA-144345480-1');
               <h4>(주)셰어링홈즈</h4>
               <p>사업자번호 448-81-01404 <br>
                 주소: 울산광역시 중구 신기15길 4, 3층(태화동)</p>
-                <p>Copyright &copy; 2019 SHARING All rights reserved.</p>
+                <p>Copyright &copy; 2019 Copyright ⓒ SHARING All rights reserved.</p>
           </div>
         </div>
       </div>
     </footer>
-    <p>
-      <!--Start of Tawk.to Script-->
-      <script type="text/javascript">
-      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/5d36b04e6d808312283988d9/default';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-      })();
-      </script>
-      <!--End of Tawk.to Script-->
-    </p>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </body>
