--- a/스터딩스터디카페사당점내부사진.html
+++ b/스터딩스터디카페사당점내부사진.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>스터딩스터디카페</title>
+    <title>스터딩스터디카페서울사당점내부사진</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean" rel="stylesheet">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -18,6 +20,7 @@ gtag('config', 'UA-144345480-1');
 <style>
 h1{
   text-align: center;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 </style>
   </head>
@@ -54,14 +57,14 @@ h1{
                <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://map.naver.com/local/siteview.nhn?code=1550514722&_ts=1570586353998" target="_blank">서울 사당점</a></li>
-                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272&_ts=1570969802965" target="_blank">울산 태화점</a></li>
+                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272" target="_blank">울산 태화점</a></li>
                 </ul>
                </li>
              </ul>
            </div>
       </div>
     </nav>
-<h1>서울 사당점</h1>
+<h1>서울 사당점</h1><br>
     <p>
           <img src="images/studying12.jpg" width="100%">
           <img src="images/studying08.jpg" width="100%">
