--- a/스터딩스터디카페태화점상세요금.html
+++ b/스터딩스터디카페태화점상세요금.html
@@ -6,7 +6,8 @@
     <title>스터딩스터디카페 사당점 상세요금</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="menu.css">
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap&subset=korean" rel="stylesheet">
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144345480-1"></script>
 <script>
@@ -19,6 +20,7 @@ gtag('config', 'UA-144345480-1');
 <style>
 h1{
   text-align: center;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 </style>
   </head>
@@ -55,7 +57,7 @@ h1{
                <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://map.naver.com/local/siteview.nhn?code=1550514722&_ts=1570586353998" target="_blank">서울 사당점</a></li>
-                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272&_ts=1570969802965" target="_blank">울산 태화점</a></li>
+                  <li><a href="https://map.naver.com/local/siteview.nhn?code=1077585272" target="_blank">울산 태화점</a></li>
                 </ul>
                </li>
              </ul>
