--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ gtag('config', 'UA-144345480-1');
   </head>
   <body>
     <style type="text/css">
+        body {
+      text-align: center;
+    }
       .jumbotron {
         background-image: url('images/도서관3수정.jpg');
         background-size: cover;
@@ -95,7 +98,8 @@ gtag('config', 'UA-144345480-1');
            </div>
       </div>
     </nav>
-    <br>
+    <img src="images/studying21사이즈수정.jpg" width="20%">
+    <br><br>
     <div class="container">
       <div class="jumbotron">
         <br><br>
