--- a/스터딩스터디카페태화점내부사진.html
+++ b/스터딩스터디카페태화점내부사진.html
@@ -66,10 +66,12 @@ h1{
     </nav>
 <h1>울산 태화점</h1><br>
     <p>
-          <img src="images/울산태화점사진1.jpg" width="100%">
-          <img src="images/울산태화점사진2.jpg" width="100%">
-          <img src="images/울산태화점사진3.jpg" width="100%">
-          <img src="images/울산태화점사진4.jpg" width="100%">
+          <img src="images/태화점사진1.jpg" width="100%">
+          <img src="images/태화점사진6.jpg" width="100%">
+          <img src="images/태화점사진10.jpg" width="100%">
+          <img src="images/태화점사진12.jpg" width="100%">
+          <img src="images/태화점사진합성.jpg" width="100%">
+          <img src="images/태화점사진합성2.jpg" width="100%">
         </p>
     <br>
     <footer style="background-color: #000000; color: #ffffff;">
