--- a/sharingFAQ.html
+++ b/sharingFAQ.html
@@ -78,9 +78,9 @@ gtag('config', 'UA-144345480-1');
       <div class="container">
         <br>
         <div class="row" style="text-align: center;">
-        <a href="https://www.instagram.com/studying_lounge/?hl=ko" target="_blank"><img src="images/instagram.png" width="5%"></a>&emsp;
-        <a href="https://blog.naver.com/sharing1988" target="_blank"><img src="images/네이버블로그.png" width="5%"></a>&emsp;
-        <a href="https://pf.kakao.com/_ExgExkj" target="_blank"><img src="images/카카오톡.png" width="5%"></a><br>
+        <a href="https://www.instagram.com/studying_lounge/?hl=ko" target="_blank"><img src="images/instagram.png" width="10%"></a>&emsp;&emsp;&emsp;
+        <a href="https://blog.naver.com/sharing1988" target="_blank"><img src="images/네이버블로그.png" width="10%"></a>&emsp;&emsp;&emsp;
+        <a href="https://pf.kakao.com/_ExgExkj" target="_blank"><img src="images/카카오톡.png" width="10%"></a><br>
       </div>
       <br>
         <div class="row">
